# FluentRise

./: .dockerignore  .gitignore  AGENTS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  skillink.config.ts  skills-lock.json
apps/backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: __init__.py  deps.py
apps/backend/app/core/: __init__.py  config.py  exceptions.py  rate_limit.py  security.py  time.py
apps/backend/app/data/: nce_skeleton.json  nce_skeleton_meta.json
apps/backend/app/db/: database.py  redis.py
apps/backend/app/models/: __init__.py  article.py  learning_feedback.py  membership.py  mistake_book.py  note.py  practice_session.py  review_schedule.py  study_log.py  user.py  vocabulary.py
apps/backend/app/repositories/: __init__.py  article_proposal_repository.py  article_repository.py  dashboard_repository.py  membership_repository.py  mistake_book_repository.py  note_repository.py  practice_repository.py  review_repository.py  study_log_repository.py  user_repository.py  vocabulary_repository.py
apps/backend/app/schemas/: __init__.py  ai_chat.py  article.py  article_proposal.py  mistake_book.py  note.py  pagination.py  playground.py  review.py  speech.py  study_log.py  system.py  user.py  vocabulary.py
apps/backend/app/services/: __init__.py  ai_chat_context_service.py  (+28 more)
apps/backend/migrations/: env.py
apps/backend/tests/: conftest.py  test_config.py  test_exceptions.py  test_health.py
(+153 files in other folders)
